--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "admin": "file:",
     "axios": "^1.7.4",
     "lucide-react": "^0.510.0",
     "react": "^18.3.1",
