--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "backend": "file:",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
