--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.510.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5"
   },
@@ -29,6 +30,6 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
+    "vite": "^6.3.5"
   }
 }
